using ui router

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,4 +1,7 @@
 <!-- home.html -->
 <div class="page-header">
    <h1>Página Home!</h1>
+    <div ng-controller="HomeCtrl">
+   		<p>{{ msg }}</p>
+   </div>
 </div>
